--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
   </head>
   <body>
-    <div class="main">
-      <h1>Threads of the City</h1>
-      <p>...makes ambient music for the Internet</p>
-      <p><a href="https://vivariumrecordings.bandcamp.com/album/paraben-kingdom"><em>Paraben Kingdom</em></a> is out now on Vivarium Recordings! </p>
-      <iframe style="border: 0; width: 350px; height: 373px;" src="https://bandcamp.com/EmbeddedPlayer/album=2921058015/size=large/bgcol=333333/linkcol=0f91ff/artwork=none/transparent=true/" seamless>
-        <a href="https://vivariumrecordings.bandcamp.com/album/paraben-kingdom">Paraben Kingdom by Threads of the City</a>
-      </iframe>
-      <p>Also on <a href="https://li.sten.to/threadsofthecity">major streaming sites</a></p>
-      <p>Contact: <a href="mailto:threadsofthecity@proton.me">threadsofthecity@proton.me</a></p>
+    <div class="main-container">
+      <div class="main">
+        <h1>Threads of the City</h1>
+        <p>...makes ambient music for the Internet</p>
+        <p><a href="https://vivariumrecordings.bandcamp.com/album/paraben-kingdom"><em>Paraben Kingdom</em></a> is out now on Vivarium Recordings! </p>
+        <iframe style="border: 0; width: 350px; height: 373px;" src="https://bandcamp.com/EmbeddedPlayer/album=2921058015/size=large/bgcol=333333/linkcol=0f91ff/artwork=none/transparent=true/" seamless>
+          <a href="https://vivariumrecordings.bandcamp.com/album/paraben-kingdom">Paraben Kingdom by Threads of the City</a>
+        </iframe>
+        <p>Also on <a href="https://li.sten.to/threadsofthecity">major streaming sites</a></p>
+        <p>Contact: <a href="mailto:threadsofthecity@proton.me">threadsofthecity@proton.me</a></p>
+      </div>
     </div>
   </body>
 </html>
